Bug 292431. Don't resize the scrolled frame's view until we know exactly what size it should be ... avoids unnecessary repainting. r+sr=bzbarsky,a=chofmann